--- a/VisitOurLands/src/Pages/Login/Login.css
+++ b/VisitOurLands/src/Pages/Login/Login.css
@@ -21,7 +21,21 @@
 }
 
 .login-button {
-    
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    color: white;
+    font-size: 20px;
+    position: relative;
+    display: table;
+    margin: 15px 70px 10px 70px;
+    padding: 2px 5px 2px 5px;
+    text-align: center;
+    border-radius: 5px;
+    width: 190px;
+    height: 40px;
+    border: 0.5px solid black;
+    cursor: pointer;
+    background-color: #D97C2B;
+    text-decoration: inherit;
 }
 
 .signin-button {
