--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,7 +1,3 @@
-* {
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
-}
-
 .login-root {
     display: grid;
     place-items: center;
@@ -26,16 +22,17 @@
     font-size: 20px;
     position: relative;
     display: table;
-    margin: 15px 70px 10px 70px;
+    margin: 0px 70px 10px 70px;
     padding: 2px 5px 2px 5px;
     text-align: center;
     border-radius: 5px;
     width: 190px;
     height: 40px;
-    border: 0.5px solid black;
+    border: 0.5px solid #D97C2B;
     cursor: pointer;
     background-color: #D97C2B;
     text-decoration: inherit;
+    font-size: medium;
 }
 
 .signin-button {
@@ -44,19 +41,20 @@
     font-size: 20px;
     position: relative;
     display: table;
-    margin: 15px 70px 10px 70px;
+    margin: 0px 70px 10px 70px;
     padding: 2px 5px 2px 5px;
     text-align: center;
     border-radius: 5px;
-    border: 0.5px solid black;
+    border: 0.5px solid #8C4303;
     cursor: pointer;
-    width: 170px;
+    width: 190px;
     height: 40px;
     background-color: #8C4303;
     text-decoration: inherit;
+    font-size: medium;
 }
 
-h2{
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-    color: #8C4303;
+.welcome-jagui{
+    position: relative;
+    width: 300px;
 }
