bugs fixed and see more button implementation.

--- a/src/Components/texts.css
+++ b/src/Components/texts.css
@@ -28,6 +28,16 @@ h3{
     font-size: 30px;
 }
 
+h4{
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    color: #04738C;
+    padding: 0px 0px 0px 0px;
+    text-align: left;
+    font-size: 35px;
+	display: block;
+    margin-top: 3px;
+}
+
 p{
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     font-size:medium;
