--- a/src/Components/display.css
+++ b/src/Components/display.css
@@ -1,9 +1,8 @@
 .root {
     display: grid;
-	place-items: center;
-	height: 100%;
-	width: 100%;
-	background-size: cover;
+    place-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
