--- a/src/Components/texts.css
+++ b/src/Components/texts.css
@@ -38,6 +38,16 @@ h4{
     margin-top: 3px;
 }
 
+h5{
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    color: #04738C;
+    padding: 0px 0px 0px 0px;
+    text-align: left;
+    font-size: 35px;
+	display: block;
+    margin-top: 2.5%;
+}
+
 p{
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     font-size:medium;
