--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -10,6 +10,7 @@
 #profile-picture {
     width: 100px;
     height: 100px;
+    align-items: center;
     border-radius: 50%;
     margin-right: 20px;
 }
