--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -4,7 +4,7 @@
     padding: 20px;
     border: 4px solid #FFAA4F;
     border-radius: 5px;
-    width: 350px;
+    width: 100%;
 }
   
 #profile-picture {
@@ -49,6 +49,7 @@
 .recommendation-card {
     border-radius: 5px;
     padding: 10px;
+    width: 100%;
     margin-bottom: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
