--- a/src/Pages/CreatePlace/CreatePlace.css
+++ b/src/Pages/CreatePlace/CreatePlace.css
@@ -39,17 +39,12 @@
   .description-place,
   .department,
   .imageUrl,
-  .rating {
+  .cont-rating{
     padding: 10px;
     border: 2px solid #FFAA4F;
     border-radius: 5px;
     margin-bottom: 20px;
     font-size: 16px;
-  }
-  
-  .rating {
-    width: 50px;
-    align-self: center;
   }
   
   .submit {
@@ -66,3 +61,32 @@
     background-color: #E59438;
   }
   
+.cont-rating{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row ;
+  position: relative;
+}
+
+.ec-stars-wrapper {
+  font-size: 0;
+  display: inline-block;
+}
+
+.ec-stars-wrapper a {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 32px;
+  font-size: 2rem;
+  color: #111;
+}
+
+.ec-stars-wrapper a.filled,
+.ec-stars-wrapper a:hover {
+  color: #ffaa4f;
+}
+
+.ec-stars-wrapper > a:hover ~ a {
+  color: #111;
+}
