--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -4,7 +4,7 @@
     padding: 12px;
     border: 4px solid #FFAA4F;
     border-radius: 5px;
-    width: 100%;
+    width: 500px;
 }
   
 #profile-picture {
@@ -51,9 +51,9 @@
 .recommendation-card {
     border-radius: 5px;
     padding: 10px;
-    width: 100%;
+    width: 500px;
     margin-bottom: 5%;
-    margin-top: 7%;
+    margin-top: 40px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
@@ -83,7 +83,8 @@
   
   .rating-stars i {
     font-size: 20px;
-    margin-top: -45%;
+    margin-top: -25%;
+    margin-bottom: 12%;
     margin-right: 5px;
   }
   
