--- a/src/Pages/MainPage/HomePage/HomePage.css
+++ b/src/Pages/MainPage/HomePage/HomePage.css
@@ -3,11 +3,11 @@
 .main-title {
   font-family: 'Pacifico', cursive;
   font-size: 60px;
-  color: black;
+  color: rgb(246, 247, 248);
 }
 
 .role-message {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20px;
-  color: black;
+  color: rgb(246, 247, 248);
 }
