--- a/src/Pages/TopRec/TopRec.css
+++ b/src/Pages/TopRec/TopRec.css
@@ -111,4 +111,30 @@
     background-color: #04738c;
     color: #fff;
   }  
-  
+
+  .comment-modal {
+    border-radius: 5px;
+    position: fixed;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-15%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    z-index: 9999; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px; 
+  }
+
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    line-height: 1;
+    cursor: pointer;
+    color: #333;
+    padding: 0;
+  }
