--- a/src/Pages/TopRec/TopRec.css
+++ b/src/Pages/TopRec/TopRec.css
@@ -110,7 +110,21 @@
   .pagination button:hover {
     background-color: #04738c;
     color: #fff;
-  }  
+  } 
+  
+  .rating-modal {
+    border-radius: 5px;
+    position: fixed;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-15%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    z-index: 9999; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px; 
+  }
 
   .comment-modal {
     border-radius: 5px;
