--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -13,12 +13,13 @@
     height: 100px;
     align-items: center;
     border-radius: 50%;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
   
 .column {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
 }
   
 .username {
@@ -101,4 +102,27 @@
 
 .rating-stars i.empty-star {
   color: #FFAA4F;
+}
+
+.image-container{
+  Display:flex; 
+  align-items : center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.image-change-submit {
+  padding: 5px 10px;
+  background-color: #FFAA4F;
+  color: white;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.image-display{
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
 }
