--- a/src/Pages/RecommendationPage/RecommendationPage.css
+++ b/src/Pages/RecommendationPage/RecommendationPage.css
@@ -71,7 +71,7 @@
   }
   
   .comments-container h2 {
-    font-size: 18px;
+    font-size: 24px;
     margin-bottom: 10px;
     color: #333;
   }
@@ -86,7 +86,7 @@
   }
   
   .comments-container p {
-    font-size: 14px;
+    font-size: 18px;
     color: #555;
   }
 
@@ -94,8 +94,9 @@
 .rating-container {
   display: flex;
   align-items: center;
-  font-size: 18px;
+  font-size: 35px;
   color: #8C4303; /* Color de las estrellas rellenadas */
+  justify-content: center;
 }
 
 .rating-text {
@@ -105,4 +106,7 @@
 .star {
   font-size: 24px; /* Tamaño de las estrellas */
   color: #ccc; /* Color de las estrellas vacías */
+}
+.average-rating{
+  margin-right: 10%;
 }
