button for the user to choose the number of reviews in each page in top recommendations

--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -40,3 +40,9 @@
     position: relative;
     width: 300px;
 }
+
+p .recover-link {
+    color: #8C4303;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  }
+  
