--- a/src/Pages/MainPage/MainPage.css
+++ b/src/Pages/MainPage/MainPage.css
@@ -1,9 +1,17 @@
 .main-page {
   height: 100vh;
   width: 100vw;
+  overflow-y: auto;
   position: relative;
   font-family: 'Source Sans Pro', sans-serif;
   justify-content: center;
+  background-size: cover;
+}
+
+@media (orientation: landscape) {
+  .main-page {
+    background-size: 100% 100%;
+  }
 }
 
 .app {
@@ -16,6 +24,11 @@
   height: 100vh;
 }
 
+@media (orientation: landscape) {
+  .main-page {
+    background-size: 100% 100%;
+  }
+}
 
 ::-webkit-scrollbar {
   width: 10px;
