--- a/src/Pages/CreatePlace/CreatePlace.css
+++ b/src/Pages/CreatePlace/CreatePlace.css
@@ -4,15 +4,15 @@
     align-items: center;
     padding: 20px;
     border-radius: 5px;
-    width: 400px;
     margin: 0 auto;
   }
-  
-  h1 {
+
+  .h1-create {
     font-size: 24px;
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
+    text-align: center;
   }
   
   form {
@@ -20,7 +20,7 @@
     flex-direction: column;
     width: 100%;
   }
-  
+
   .label {
     font-size: 18px;
     margin-bottom: 10px;
@@ -34,7 +34,7 @@
     border-radius: 5px;
     appearance: none;
   }
-  
+
   .name,
   .description-place,
   .department,
@@ -46,7 +46,7 @@
     margin-bottom: 20px;
     font-size: 16px;
   }
-  
+
   .submit {
     padding: 10px 20px;
     background-color: #FFAA4F;
@@ -56,17 +56,18 @@
     border-radius: 5px;
     cursor: pointer;
   }
-  
+
   .submit:hover {
     background-color: #E59438;
   }
-  
-.cont-rating{
+
+  .cont-rating-create{
   display:flex;
   justify-content: center;
   align-items: center;
   flex-direction: row ;
   position: relative;
+  margin-bottom: 20px;
 }
 
 .ec-stars-wrapper {
@@ -89,4 +90,58 @@
 
 .ec-stars-wrapper > a:hover ~ a {
   color: #111;
+}
+
+@media screen and (max-width: 321px){
+.container-CreatePlace{
+  width: 175px;
+}
+
+.create-form{
+  width: 150px;
+}
+}
+
+@media  screen and  (min-width: 321px) and (max-width: 426px){
+.container-CreatePlace{
+  width: 250px;
+}
+
+.create-form{
+  width: 200;
+}
+
+.label-upload{
+  display: inline-block;
+  width: 300px;
+}
+
+}
+
+@media screen and (min-width: 426px) and (max-width: 1024px){
+.container-CreatePlace{
+  width: 450px;
+  
+}
+.create-form{
+  width: 400px;
+}
+
+.label-upload{
+  width: 400px;
+}
+}
+
+@media screen and (min-width: 1025px) {
+.container-CreatePlace{
+  width: 900px;
+}
+
+.create-form{
+  width: 500px;
+}
+
+.upload-photo{
+  display: flex;
+}
 }
