dropdown from the main reviews page has styles now

--- a/src/Pages/Recomendations/Recomendations.css
+++ b/src/Pages/Recomendations/Recomendations.css
@@ -184,3 +184,41 @@
     padding: 10px;
     margin-top: 10px;
   }
+
+.dropdown-container {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown-container label {
+  align-items: center;
+  font-size: 12px;
+  color: #8c4303;
+  margin-right: 10px;
+}
+
+.dropdown {
+  padding: 8px;
+  border: 2px solid #FFAA4F;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 12px;
+  color: #8c4303;
+  width: 100%;
+  max-width: 120px;
+  transition: border-color 0.3s, color 0.3s;
+}
+
+.dropdown::placeholder {
+  color: #04738c;
+  opacity: 0.6;
+}
+
+.dropdown:focus {
+  border-color: #04738c;
+  color: #333;
+  outline: none;
+}
