--- a/src/Pages/TopRec/TopRec.css
+++ b/src/Pages/TopRec/TopRec.css
@@ -159,3 +159,31 @@
     padding: 10px;
     margin-top: 10px;
   }
+
+.dropdown {
+  padding: 8px;
+  border: 2px solid #FFAA4F;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 12px;
+  color: #8c4303;
+  width: 100%;
+  max-width: 120px;
+  transition: border-color 0.3s, color 0.3s;
+}
+
+.dropdown::placeholder {
+  color: #04738c;
+  opacity: 0.6;
+}
+
+.dropdown:focus {
+  border-color: #04738c;
+  color: #333; 
+  outline: none;
+}
+
+.label-text {
+  color: #8c4303;
+  margin-right: 10px;
+}
