--- a/src/Pages/TopRec/TopRec.css
+++ b/src/Pages/TopRec/TopRec.css
@@ -187,3 +187,40 @@
   color: #8c4303;
   margin-right: 10px;
 }
+
+@media only screen and (max-width: 1100px) {
+  .recommendations-container2 {
+    grid-template-columns: 1fr;
+    width: 150%;
+    max-width: 100%;
+  }
+
+  .recommendation-card2 {
+    margin-top: 20px;
+    width: 100%;
+    max-width: 90%;
+  }
+
+  .recommendation-card2 p {
+    font-size: small;
+  }
+
+  .recommendation-card2 img {
+    height: 150px;
+  }
+
+  .interaction-icons{
+    gap: 40%;
+    max-width: 90%;
+    font-size: 130%;
+    justify-content: center;
+  }
+
+  .pagination {
+    max-height: 90%;
+    max-width: 90%;
+    top: 20%;
+    position: relative;
+    margin-bottom: 30%;
+  }
+}
