--- a/src/Pages/TopRec/interactions/comment/comment.css
+++ b/src/Pages/TopRec/interactions/comment/comment.css
@@ -1,3 +1,17 @@
+.comment-container{
+    border-radius: 5px;
+    position: fixed;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-15%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    z-index: 9999; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px; 
+}
+
 .write-comment{
     border-radius: 5px;
     font-family: "Lucida Grande";
